<resources>
    <string name="app_name">ESS</string>


    <string name="username">Username:</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="push_notification">Push Notification</string>
    <string name="add_user">Add User</string>
    <string name="set_user_channels">Set User Channels</string>
    <string name="add_channel">Add Channel</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="role">Role:</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="admin">Admin</string>
    <string name="create_notification_channel">Create Notification Channel</string>
    <string name="notification_channel_name">Notification Channel Name:</string>
    <string name="notification_channel_select">Select Channel:</string>
    <string name="title_here">Title Here</string>
    <string name="search_something">Search Something</string>

    <string name="choose_class">Choose Class:</string>
    <string name="choose_issue">Choose Issue:</string>
    <string name="choose_file">Choose File</string>

    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="file">File Name:</string>
    <string name="deadline">Deadline:</string>
    <string name="change_date">Change Date</string>
    <string name="set_date">Set Date</string>
    <string name="create_issue">Create Issue</string>
    <string name="edit_issue">Edit Issue</string>

    <!--teacher-->
    <string name="subscribe_to_channel">Subscribe to channel</string>

    <!--
    fragment admin
-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--menu-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="issues">Issues</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="messages">Messages</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="comments">Comments</string>
    <string name="submits">Submits</string>
    <string name="submit">Submit</string>

</resources>