<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment2"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24" />
    <item
        android:id="@+id/searchFragment2"
        android:title="@string/search"
        android:icon="@drawable/ic_outline_search_24" />
    <item
        android:id="@+id/studentAddFragment"
        android:title="@string/issues"
        android:icon="@drawable/ic_baseline_add_24" />
    <item
        android:id="@+id/notificationsFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_none_24" />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_outline_person_24" />
</menu>