<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/teacherHomeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"/>
    <item android:id="@+id/teacherSearchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_outline_search_24"/>
    <item android:id="@+id/teacherAddFragment"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_24"/>
    <item android:id="@+id/teacherNotificationFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_none_24"/>
    <item android:id="@+id/teacherProfileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_outline_person_24"/>
</menu>