<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

  <TextView
      android:id="@+id/tvUsername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/username"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toTopOf="@+id/guideline5" />
  <EditText
      android:id="@+id/etUsername"
      android:inputType="textEmailAddress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:maxLines="1"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toBottomOf="@+id/tvUsername" />


  <TextView
      android:id="@+id/tvPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/password"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toTopOf="@+id/guideline6" />
  <EditText
      android:id="@+id/etPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:maxLines="1"
      android:inputType="textVisiblePassword"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

  <Button
      android:id="@+id/buttonLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:layout_margin="10dp"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toTopOf="@+id/guideline7" />


  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="80dp" />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="80dp"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="200dp"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="300dp"
      app:layout_constraintTop_toTopOf="parent" />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="400dp"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>